Switch service pages to clean folder-based URLs (index.html)

--- a/increase-patients/index.html
+++ b/increase-patients/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Patient Growth for Dental Practices in Cleveland, OH | Searcha</title>
   <meta name="description" content="Predictably attract high-value patients in Cleveland. Searcha helps dental practices improve visibility, positioning, and conversion for profitable growth.">
-  <link rel="icon" type="image/png" href="/reference/favicon.png">
+  <link rel="icon" type="image/png" href="../reference/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="../styles.css">
 
 <!-- Meta Pixel Code -->
 <script>
@@ -37,17 +37,17 @@ src="https://www.facebook.com/tr?id=25897314926561264&ev=PageView&noscript=1"
   <!-- Navigation -->
   <nav class="nav nav-light" id="nav">
     <div class="container nav-container">
-      <a href="/" class="nav-logo"><img src="/reference/searcha_logo_black.png" alt="Searcha" height="120"></a>
+      <a href="../" class="nav-logo"><img src="../reference/searcha_logo_black.png" alt="Searcha" height="120"></a>
       <div class="nav-links">
         <a href="/" class="nav-link">Home</a>
         <div class="nav-dropdown">
           <button class="nav-link nav-dropdown-toggle" type="button">Services</button>
           <div class="nav-dropdown-menu">
-            <a href="/employee-recruitment/">Employee Recruitment</a>
-            <a href="/increase-patients/">Increase Patients</a>
+            <a href="../employee-recruitment/">Employee Recruitment</a>
+            <a href="../increase-patients/">Increase Patients</a>
           </div>
         </div>
-        <a href="/increase-patients/" class="nav-link">Patient Growth</a>
+        <a href="../increase-patients/" class="nav-link">Patient Growth</a>
         <a href="#process" class="nav-link">Process</a>
         <a href="#contact" class="nav-link">Contact</a>
         <a href="#form" class="btn btn-primary nav-cta">Get Started</a>
@@ -80,7 +80,7 @@ src="https://www.facebook.com/tr?id=25897314926561264&ev=PageView&noscript=1"
           </a>
         </div>
         <div class="hero-light-image">
-          <img src="/reference/increasepatientsphoto.jpg" alt="Healthcare professionals">
+          <img src="../reference/increasepatientsphoto.jpg" alt="Healthcare professionals">
         </div>
       </div>
     </div>
@@ -91,10 +91,10 @@ src="https://www.facebook.com/tr?id=25897314926561264&ev=PageView&noscript=1"
     <div class="container">
       <p class="trust-bar-text">Recommended by 300+ dental facilities</p>
       <div class="trust-bar-logos">
-        <img src="/reference/labcorp.png" alt="Partner">
-        <img src="/reference/quest.png" alt="Partner">
-        <img src="/reference/Cigna.png" alt="Partner">
-        <img src="/reference/sonichealth.png" alt="Partner" class="no-invert">
+        <img src="../reference/labcorp.png" alt="Partner">
+        <img src="../reference/quest.png" alt="Partner">
+        <img src="../reference/Cigna.png" alt="Partner">
+        <img src="../reference/sonichealth.png" alt="Partner" class="no-invert">
       </div>
     </div>
   </section>
@@ -102,35 +102,35 @@ src="https://www.facebook.com/tr?id=25897314926561264&ev=PageView&noscript=1"
   <!-- Logo Marquee Section -->
   <section class="logo-marquee-section employee-recruitment-marquee">
     <div class="logo-marquee-bg">
-      <img src="/reference/Cleveland_Hero001.jpeg" alt="Cleveland skyline">
+      <img src="../reference/Cleveland_Hero001.jpeg" alt="Cleveland skyline">
     </div>
     <div class="logo-marquee-overlay"></div>
     <div class="container">
       <div class="logo-marquee-wrapper">
         <div class="logo-marquee-track">
           <div class="logo-marquee-item">
-            <img src="/reference/labcorp.png" alt="LabCorp">
+            <img src="../reference/labcorp.png" alt="LabCorp">
           </div>
           <div class="logo-marquee-item">
-            <img src="/reference/quest.png" alt="Quest Diagnostics">
+            <img src="../reference/quest.png" alt="Quest Diagnostics">
           </div>
           <div class="logo-marquee-item">
-            <img src="/reference/Cigna.png" alt="Cigna logo">
+            <img src="../reference/Cigna.png" alt="Cigna logo">
           </div>
           <div class="logo-marquee-item">
-            <img src="/reference/sonichealth.png" alt="Sonic Healthcare" class="no-invert">
+            <img src="../reference/sonichealth.png" alt="Sonic Healthcare" class="no-invert">
           </div>
           <div class="logo-marquee-item">
-            <img src="/reference/labcorp.png" alt="LabCorp">
+            <img src="../reference/labcorp.png" alt="LabCorp">
           </div>
           <div class="logo-marquee-item">
-            <img src="/reference/quest.png" alt="Quest Diagnostics">
+            <img src="../reference/quest.png" alt="Quest Diagnostics">
           </div>
           <div class="logo-marquee-item">
-            <img src="/reference/Cigna.png" alt="Cigna logo">
+            <img src="../reference/Cigna.png" alt="Cigna logo">
           </div>
           <div class="logo-marquee-item">
-            <img src="/reference/sonichealth.png" alt="Sonic Healthcare" class="no-invert">
+            <img src="../reference/sonichealth.png" alt="Sonic Healthcare" class="no-invert">
           </div>
         </div>
       </div>
@@ -147,7 +147,7 @@ src="https://www.facebook.com/tr?id=25897314926561264&ev=PageView&noscript=1"
       </div>
       <div class="patient-wheel">
         <div class="patient-wheel-center">
-          <img src="/reference/searchageo.png" alt="Searcha logo">
+          <img src="../reference/searchageo.png" alt="Searcha logo">
           <span class="patient-wheel-label">Searcha</span>
         </div>
         <div class="patient-wheel-card patient-wheel-top">
@@ -293,7 +293,7 @@ src="https://www.facebook.com/tr?id=25897314926561264&ev=PageView&noscript=1"
         <div class="form-grid">
           <div class="form-image-side">
             <div class="form-image-wrapper">
-              <img src="/reference/labcase2.jpeg" alt="Searcha team">
+              <img src="../reference/labcase2.jpeg" alt="Searcha team">
             </div>
             <div class="form-features">
               <div class="form-feature">
@@ -348,7 +348,7 @@ src="https://www.facebook.com/tr?id=25897314926561264&ev=PageView&noscript=1"
       <div class="testimonials-grid">
         <div class="testimonial-card">
           <div class="testimonial-header">
-            <img class="testimonial-avatar" src="/reference/drreynolds.png" alt="Dr. Michael Reynolds">
+            <img class="testimonial-avatar" src="../reference/drreynolds.png" alt="Dr. Michael Reynolds">
             <div>
               <div class="testimonial-author-name">Dr. Michael Reynolds, DDS</div>
               <div class="testimonial-author-role">General & Cosmetic Dentist</div>
@@ -358,7 +358,7 @@ src="https://www.facebook.com/tr?id=25897314926561264&ev=PageView&noscript=1"
         </div>
         <div class="testimonial-card">
           <div class="testimonial-header">
-            <img class="testimonial-avatar" src="/reference/drsara.jpeg" alt="Dr. Sarah Thompson">
+            <img class="testimonial-avatar" src="../reference/drsara.jpeg" alt="Dr. Sarah Thompson">
             <div>
               <div class="testimonial-author-name">Dr. Sarah Thompson, DMD</div>
               <div class="testimonial-author-role">Family & Preventive Dentist</div>
@@ -368,7 +368,7 @@ src="https://www.facebook.com/tr?id=25897314926561264&ev=PageView&noscript=1"
         </div>
         <div class="testimonial-card">
           <div class="testimonial-header">
-            <img class="testimonial-avatar" src="/reference/drjames.jpg" alt="Dr. James Carter">
+            <img class="testimonial-avatar" src="../reference/drjames.jpg" alt="Dr. James Carter">
             <div>
               <div class="testimonial-author-name">Dr. James Carter, DDS</div>
               <div class="testimonial-author-role">Restorative & Implant Dentist</div>
@@ -433,7 +433,7 @@ src="https://www.facebook.com/tr?id=25897314926561264&ev=PageView&noscript=1"
     <div class="container">
       <div class="footer-grid">
         <div class="footer-brand">
-          <div class="footer-logo"><img src="/reference/searcha_logo.png" alt="Searcha" height="60"></div>
+          <div class="footer-logo"><img src="../reference/searcha_logo.png" alt="Searcha" height="60"></div>
           <p class="footer-description">The specialized solution for dental practices in Cleveland. We help attract better patients, stronger teams, and stress-free growth through strategic visibility.</p>
           <div class="footer-social">
             <a href="https://www.facebook.com/profile.php?id=61586578173523" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Facebook">
@@ -454,7 +454,7 @@ src="https://www.facebook.com/tr?id=25897314926561264&ev=PageView&noscript=1"
           <h4 class="footer-column-title">Quick Links</h4>
           <div class="footer-links">
             <a href="/" class="footer-link">Home</a>
-            <a href="/increase-patients/" class="footer-link">Patient Growth</a>
+            <a href="../increase-patients/" class="footer-link">Patient Growth</a>
             <a href="#process" class="footer-link">Process</a>
             <a href="#contact" class="footer-link">Contact</a>
           </div>
