--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ src="https://www.facebook.com/tr?id=25897314926561264&ev=PageView&noscript=1"
         <div class="nav-dropdown">
           <button class="nav-link nav-dropdown-toggle" type="button">Services</button>
           <div class="nav-dropdown-menu">
-            <a href="/employee-recruitment/">Employee Recruitment</a>
-            <a href="/increase-patients/">Increase Patients</a>
+            <a href="employee-recruitment/">Employee Recruitment</a>
+            <a href="increase-patients/">Increase Patients</a>
           </div>
         </div>
         <a href="#process" class="nav-link">Process</a>
@@ -130,11 +130,11 @@ src="https://www.facebook.com/tr?id=25897314926561264&ev=PageView&noscript=1"
           Increased Profit and Relief Through Qualified Staff and Patients
         </h1>
         <div class="hero-buttons">
-          <a href="/employee-recruitment/" class="btn btn-primary">
+          <a href="employee-recruitment/" class="btn btn-primary">
             Employee Recruitment
             <svg class="btn-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"/></svg>
           </a>
-          <a href="/increase-patients/" class="btn btn-outline">
+          <a href="increase-patients/" class="btn btn-outline">
             Increase Patient Size
             <svg class="btn-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/></svg>
           </a>
