Switch service pages to clean folder-based URLs (index.html)

--- a/increase-patients/index.html
+++ b/increase-patients/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Patient Growth for Dental Practices in Cleveland, OH | Searcha</title>
   <meta name="description" content="Predictably attract high-value patients in Cleveland. Searcha helps dental practices improve visibility, positioning, and conversion for profitable growth.">
-  <link rel="icon" type="image/png" href="../reference/favicon.png">
+  <link rel="icon" type="image/x-icon" href="../reference/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="../reference/favicon.ico">
+  <link rel="apple-touch-icon" href="../reference/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
