--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Best Dental Marketing Agency in Cleveland, OH | Searcha</title>
   <meta name="description" content="Cleveland dental marketing agency helping practices attract more patients with local SEO, Google Business optimization, and AI search visibility.">
-  <link rel="icon" type="image/png" href="./reference/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./reference/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="./reference/favicon.ico">
+  <link rel="apple-touch-icon" href="./reference/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -72,11 +74,11 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '25897314926561264');
+fbq('init', '887251770465323');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=25897314926561264&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=887251770465323&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 
