--- a/index.html
+++ b/index.html
@@ -3228,7 +3228,9 @@
     <div class="popup-card" id="popup-form" role="dialog" aria-modal="true" aria-labelledby="popup-title">
       <button class="popup-close" id="popup-close" aria-label="Close popup">×</button>
       <div class="popup-title" id="popup-title">Ready to grow?</div>
-      <form class="popup-form">
+      <form class="popup-form" action="https://formsubmit.co/lukapranjeta18@gmail.com" method="POST">
+        <input type="hidden" name="_subject" value="New Ready to Grow Form Submission">
+        <input type="hidden" name="_captcha" value="false">
         <input class="popup-input" type="text" name="full_name" placeholder="Full Name" required>
         <input class="popup-input" type="email" name="email" placeholder="Email" required>
         <input class="popup-input" type="tel" name="phone" placeholder="Phone" required>
