--- a/index.html
+++ b/index.html
@@ -3231,6 +3231,8 @@
       <form class="popup-form" action="https://formsubmit.co/lukapranjeta18@gmail.com" method="POST">
         <input type="hidden" name="_subject" value="New Ready to Grow Form Submission">
         <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_next" value="https://searcha.me/">
+        <input type="text" name="_honey" style="display:none">
         <input class="popup-input" type="text" name="full_name" placeholder="Full Name" required>
         <input class="popup-input" type="email" name="email" placeholder="Email" required>
         <input class="popup-input" type="tel" name="phone" placeholder="Phone" required>
