--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       font-size: 16px;
       line-height: 1.6;
       color: var(--navy-primary);
-      background-color: var(--navy-primary);
+      background-color: #FFFFFF;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
       overflow-x: hidden;
