--- a/index.html
+++ b/index.html
@@ -1943,6 +1943,10 @@
       margin-bottom: 12px;
     }
 
+    .pos-title .pos-line {
+      display: inline;
+    }
+
     .pos-title .pos-underline {
       display: inline-block;
       border-bottom: 6px solid #FFFFFF;
@@ -2024,6 +2028,11 @@
       }
       .pos-title {
         font-size: 2rem;
+        text-align: center;
+        line-height: 1.05;
+      }
+      .pos-title .pos-line {
+        display: block;
       }
       .pos-image img {
         max-width: 300px;
@@ -2704,6 +2713,8 @@
         left: 50%;
         transform: translateX(-50%) scale(0.85);
         gap: 6px;
+        flex-direction: column;
+        align-items: center;
       }
 
       .roas-float-card {
@@ -3213,8 +3224,9 @@
       <div class="pos-card">
         <div class="pos-content">
           <h2 class="pos-title">
-            GET 30 NEW CLIENTS<br>
-            A MONTH <span class="pos-underline">GUARANTEED</span>
+            <span class="pos-line">GET 30</span>
+            <span class="pos-line">NEW CLIENTS</span>
+            <span class="pos-line">A MONTH <span class="pos-underline">GUARANTEED</span></span>
           </h2>
           <p class="pos-copy">
             Your success is guaranteed. No appointments in the first month? You don’t pay. Ready to start?
