--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
       box-shadow: 0 10px 24px rgba(0, 0, 0, 0.25);
     }
 
-    .sparkle-emoji {
-      font-size: 1.2em;
+    .sparkle-mark {
+      font-size: 1.1em;
       line-height: 1;
       display: inline-block;
       transform: translateY(1px);
@@ -2713,7 +2713,7 @@
         left: 50%;
         transform: translateX(-50%) scale(0.85);
         gap: 6px;
-        flex-direction: column;
+        flex-direction: column !important;
         align-items: center;
       }
 
@@ -2768,7 +2768,7 @@
           Call for Consultation
         </a>
         <a href="#popup-form" class="nav-btn nav-btn-primary" data-open-popup>
-          Request Information <span class="sparkle-emoji" aria-hidden="true">✨</span>
+          Request Information <span class="sparkle-mark" aria-hidden="true">˙✦</span>
         </a>
       </div>
 
@@ -2796,7 +2796,7 @@
           </h1>
           <p class="hero-tagline"><strong>#1</strong> Marketing agency to get patients and talent</p>
           <div class="hero-cta-row">
-            <a href="#popup-form" class="btn btn-primary" data-open-popup>Book a free consultation ✨</a>
+            <a href="#popup-form" class="btn btn-primary" data-open-popup>Book a free consultation <span class="sparkle-mark" aria-hidden="true">˙✦</span></a>
           </div>
         </div>
         <div class="hero-image">
@@ -2932,7 +2932,7 @@
           We book quality appointment bookings, no gimmicks. Quality clients, effective ads, and a smooth lead system that delivers real growth.
         </p>
         <a href="#popup-form" class="about-cta" data-open-popup>
-          Book a free consultation ✨
+          Book a free consultation <span class="sparkle-mark" aria-hidden="true">˙✦</span>
         </a>
       </div>
       <div class="about-image">
@@ -3232,7 +3232,7 @@
             Your success is guaranteed. No appointments in the first month? You don’t pay. Ready to start?
           </p>
           <a class="pos-cta" href="#popup-form" data-open-popup>
-            Book a free consultation <span class="sparkle-emoji" aria-hidden="true">✨</span>
+            Book a free consultation <span class="sparkle-mark" aria-hidden="true">˙✦</span>
           </a>
         </div>
         <div class="pos-image">
